2003-09-28 Craig Franklin <craigfranklin@comcast.net>
  * Fixed gplink bug in 18xx absolute sections.
  * Fixed gplink memory allocation bug in 18xx devices.

2003-08-08 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bug that could cause problems with comments on include directives.

2003-08-01 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.6 Released.
  * Added support for idata sections in gplink.
  * Changed extension of gplink object output from ".out" to ".cof"

2003-07-23 Craig Franklin <craigfranklin@comcast.net>
  * Fixed bsr boundary location for 18f248, 18f258,18f448, and 18f458.
  * Changed gpasm, gpdasm, and gpvo memory dump address format from word to
    byte for 18xx devices.
  * Changed gplink processor check to be processor family instead of processor
    name.
  * Changed gpdasm to display the second word of 18xx two word instructions.

2003-07-20 Craig Franklin <craigfranklin@comcast.net>
  * Added new processors: 16f716, 18f2620, 18f4620
  * Update header files and linker scripts.
  * Fixed gplink error that caused the map file to always be generated.
  * Fixed bug in gpasm that caused 18xx access bank bit to be ignored if it
    was specified on some instructions.
  * Changed gpdasm 18xx address format from word to byte. 

2003-07-07 Craig Franklin <craigfranklin@comcast.net>
  * Changed extension of gplink object output from ".o" to ".out"
  * Fixed error in RES directive when used for data sections.
  * Fixed typo in gp_date_string.

2003-06-28 Craig Franklin <craigfranklin@comcast.net>
  * gputils 0.11.5 Released.
  * Fixed byte count when RES directive is used in 18xx data sections.
  * Display help when multiple files are passed to gpasm, gpdasm, gpvo, 
    and gpvc on the command line.
  * Check for lower case filename if include file is not found.

2003-06-23 Craig Franklin <craigfranklin@comcast.net>
  * Extended the legal syntax for difference of coff symbols within the same
    section.
